language/move-prover/tests/sources/functional/pure_function_call_incorrect.exp
Move prover returns: exiting with checking errors
error: calling impure function `TestPureFun::init` is not allowed

    ┌── tests/sources/functional/pure_function_call_incorrect.move:32:20 ───
    │
 32 │         aborts_if !init(account);
    │                    ^^^^^^^^^^^^^
    │
    = impure function `TestPureFun::init(&signer): bool`

error: calling impure function `TestPureFun::impure_f_2` is not allowed

    ┌── tests/sources/functional/pure_function_call_incorrect.move:53:13 ───
    │
 53 │             impure_f_2()
    │             ^^^^^^^^^^^^
    │
    = impure function `TestPureFun::impure_f_2(): u64`
